Making it avoid port 5000 (Apple AirPlay), and adding debug flag

--- a/secure_exfiltrate/Makefile
+++ b/secure_exfiltrate/Makefile
@@ -1,7 +1,7 @@
 .PHONY: start
 
-start:
+server:
 	@pkill ngrok || true
 	@echo "Starting services with concurrently..."
-	@concurrently --prefix none "ngrok http 5000" "server.py"
+	@concurrently --prefix none "ngrok http 5001" "server.py"
 
