New IP-lookup tool, and saving some old work
Some old work (I can't remember it's status) on the secure exfiltrate.  Ngrok may have changed it's APIs

--- a/secure_exfiltrate/Makefile
+++ b/secure_exfiltrate/Makefile
@@ -3,5 +3,5 @@
 server:
 	@pkill ngrok || true
 	@echo "Starting services with concurrently..."
-	@concurrently --prefix none "ngrok http 5001" "server.py"
+	@concurrently --prefix none "ngrok http 5001" "server.py --lang shell"
 
