--- a/host_rewrite_proxy/Makefile
+++ b/host_rewrite_proxy/Makefile
@@ -12,7 +12,7 @@ stop:
 	@pkill -f "python3 server.py" || true
 
 # Run all tests
-test: test-unit test-server-flow
+test: test-unit test-reverse-proxy test-server
 	@echo "✅ All tests completed!"
 
 # Run unit tests
@@ -22,11 +22,17 @@ test-unit:
 	@python3 -m unittest tests.test_cookie_extraction -v
 	@echo "✅ Unit tests passed!"
 
-# Run server flow tests
-test-server-flow:
-	@echo "🧪 Running server flow tests..."
-	@python3 tests/test_server_flow.py
-	@echo "✅ Server flow tests passed!"
+# Run server tests
+test-server:
+	@echo "🧪 Running server tests..."
+	@python3 tests/test_server.py
+	@echo "✅ Server tests passed!"
+
+# Run reverse proxy tests
+test-reverse-proxy:
+	@echo "🧪 Running reverse proxy tests..."
+	@python3 tests/test_reverse_proxy.py
+	@echo "✅ Reverse proxy tests passed!"
 
 # Clean up
 clean:
